# CS163-NeuralVis

./: CMakeLists.txt  README.md  main.cpp  utils.h
DeepLearning/: Activations.cpp  Activations.h  Dependency.h  Layers.cpp  Layers.h  Loss.h  MLP.cpp  MLP.h  Parameter.h  Tensor.cpp  Tensor.h
DeepLearningV2/: MLP.h
UI/: Engine.h  InferencePage.cpp  InferencePage.h  MainMenu.cpp  MainMenu.h  ProjectPage.cpp  ProjectPage.h  TextBox.h  VisualizingPage.cpp  VisualizingPage.h
